added pima diabetes project

--- a/lending_club/LendingClub.ipynb
+++ b/lending_club/LendingClub.ipynb
@@ -5107,6 +5107,12 @@
     "past_loans['verification_status'] = past_loans['verification_status'].astype('category')\n",
     "\n",
     "# Making assumption that any currently late loans are bad; may need to revisit\n",
+    "# Assumptions from Lending Club https://www.lendingclub.com/account/investorReturnsAdjustments.action\n",
+    "# Current 0% loss\n",
+    "# In Grace Period 28% loss\n",
+    "# Late 16-30 days 58% loss\n",
+    "# Late 31-120 days 74% loss\n",
+    "# Default 89% loss\n",
     "di = {'Current': 'Good', 'Fully Paid': 'Good', 'Charged Off': 'Bad', 'Late (31-120 days)': 'Bad',\n",
     "       'In Grace Period': 'Bad', 'Late (16-30 days)': 'Bad', 'Default': 'Bad'}\n",
     "past_loans.replace({'loan_status': di}, inplace=True)\n",
