made some numbers more obvious

--- a/pima/Pima_diabetes.ipynb
+++ b/pima/Pima_diabetes.ipynb
@@ -139,8 +139,8 @@
    "source": [
     "### Recommendation\n",
     "Based on what we see in the data:\n",
-    "1. Screen patients with no blood test (Logistic Regression). \n",
-    "2. If they show a high likelihood of diabetes, follow with a glucose test (Logistic Regression).\n",
+    "1. Screen patients with no blood test (Logistic Regression - 70% accuracy). \n",
+    "2. If they show a high likelihood of diabetes, follow with a glucose test (Logistic Regression - 75% accuracy).\n",
     "\n",
     "However, the study filtered out the highest glucose tests (and glucose testing is now much cheaper). A repeated study would probably show more advantage in testing glucose."
    ]
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 376,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Mike Schoeffler\n",
-    "# Reviewer(s):\n",
+    "# Reviewer(s): Roger Zuniga (any remaining errors are my own)\n",
     "# 2/5/16 Set up data import\n",
     "import pandas as pd\n",
     "import numpy as np\n",
